syntax = "proto3";

option csharp_namespace = "LibraryManagement.Contract.Authors";

package librarymanagement;

service AuthorService {
  rpc GetAuthors(AuthorSearchRequest) returns (AuthorListResponse);
  rpc GetAuthor(AuthorGetRequest) returns (AuthorGetResponse);
  rpc CreateAuthor(CreateAuthorRequest) returns (AuthorResponse);
  rpc UpdateAuthor(UpdateAuthorRequest) returns (AuthorResponse);
}

message AuthorSearchRequest {
  string search_term = 1;
  bool is_active = 2;
  int32 page_number = 3;
  int32 page_size = 4;
}

message AuthorGetRequest {
  int64 author_id = 1;
}

message CreateAuthorRequest {
  string first_name = 1;
  string last_name = 2;
  string biography = 3;
  string date_of_birth = 4; // ISO 8601 format
}

message UpdateAuthorRequest {
  int64 author_id = 1;
  string first_name = 2;
  string last_name = 3;
  string biography = 4;
  string date_of_birth = 5;
  bool is_active = 6;
}

message AuthorResponse {
  int64 author_id = 1;
  string first_name = 2;
  string last_name = 3;
  string biography = 4;
  string date_of_birth = 5;
  bool is_active = 6;
  int32 book_count = 7;
}

message AuthorListResponse {
  repeated AuthorResponse authors = 1;
  int32 total_count = 2;
  int32 page_number = 3;
  int32 page_size = 4;
}

message AuthorGetResponse {
  AuthorResponse author = 1;
}
